--- a/ng-pokemon-app/package.json
+++ b/ng-pokemon-app/package.json
@@ -23,10 +23,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular-devkit/build-angular": "^18.0.4",
     "@angular/cli": "~14.2.13",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "angular-in-memory-web-api": "^0.18.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
