Refonte après problèmes HTTP

--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-pokemon-app",
+  "name": "pokemon-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,7 +23,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.4",
+    "@angular-devkit/build-angular": "^14.2.13",
     "@angular/cli": "~14.2.13",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
