--- a/pokemon-app/angular.json
+++ b/pokemon-app/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-pokemon-app": {
+    "pokemon-app": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-pokemon-app",
+            "outputPath": "dist/pokemon-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ng-pokemon-app:build:production"
+              "browserTarget": "pokemon-app:build:production"
             },
             "development": {
-              "browserTarget": "ng-pokemon-app:build:development"
+              "browserTarget": "pokemon-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,7 +75,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-pokemon-app:build"
+            "browserTarget": "pokemon-app:build"
           }
         },
         "test": {
